# autoware.ai

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  NOTICE.md  README.md
.circleci/: config.yml
.sonarqube/: sonar-scanner.properties
common/amathutils_lib/: CMakeLists.txt  package.xml
common/amathutils_lib/amathutils_lib_ros2/test/: test_butterworth_filter.cpp
common/amathutils_lib/include/amathutils_lib_ros2/: amathutils.hpp  time_delay_kalman_filter.hpp
common/amathutils_lib/src/amathutils_lib_ros2/: amathutils.cpp  butterworth_filter.cpp  kalman_filter.cpp  time_delay_kalman_filter.cpp
common/amathutils_lib/test/amathutils_lib_ros2/: test_amathutils_lib.cpp  test_kalman_filter.cpp
common/autoware_build_flags/: CMakeLists.txt  package.xml
common/autoware_build_flags/cmake/: autoware_build_flags-extras.cmake
common/autoware_lanelet2_ros_interface/: CMakeLists.txt  package.xml
common/autoware_lanelet2_ros_interface/include/autoware_lanelet2_ros2_interface/utility/: message_conversion.hpp  query.hpp  utilities.hpp
common/autoware_lanelet2_ros_interface/include/autoware_lanelet2_ros2_interface/visualization/: visualization.hpp
common/autoware_lanelet2_ros_interface/lib/: query.cpp
common/autoware_lanelet2_ros_interface/lib/autoware_lanelet2_ros2_interface/: message_conversion.cpp  query.cpp  utilities.cpp  visualization.cpp
common/autoware_lanelet2_ros_interface/src/autoware_lanelet2_ros2_interface/: sample_code.cpp  validation.cpp
common/autoware_lanelet2_ros_interface/test/autoware_lanelet2_ros2_interface/src/: test_message_conversion.cpp  test_query.cpp  test_utilities.cpp
common/map_file_ros2/: CMakeLists.txt  package.xml
common/map_file_ros2/config/: parameters.yaml
common/map_file_ros2/include/: get_file.hpp  lanelet2_map_loader.hpp  lanelet2_map_visualization.hpp  map_param_loader.hpp  points_map_loader.hpp
common/map_file_ros2/launch/: lanelet2_map_loader.launch.py  lanelet2_map_visualization.launch.py  map_file_loader.launch.py  map_loader.launch.py  map_param_loader.launch.py  points_map_loader.launch.py
common/map_file_ros2/lib/map_file/: get_file.cpp
common/map_file_ros2/nodes/lanelet2_map_loader/: lanelet2_map_loader.cpp  lanelet2_map_loader_node.cpp
common/map_file_ros2/nodes/lanelet2_map_visualization/: lanelet2_map_visualization.cpp  lanelet2_map_visualization_node.cpp
common/map_file_ros2/nodes/map_param_loader/: map_param_loader.cpp  map_param_loader_node.cpp
common/map_file_ros2/nodes/points_map_loader/: points_map_loader.cpp  points_map_loader_node.cpp
common/map_file_ros2/test/: test_get_transform.cpp
core_perception/deadreckoner/: CMakeLists.txt
core_perception/deadreckoner/launch/: deadreckoner.launch
core_perception/ekf_localizer/: CMakeLists.txt  package.xml
core_perception/ekf_localizer/include/ekf_localizer/: ekf_localizer.hpp
core_perception/ekf_localizer/launch/: ekf_localizer.launch.py
core_perception/ekf_localizer/src/: ekf_localizer.cpp  ekf_localizer_node.cpp
core_perception/ekf_localizer/test/: test_ekf_localizer.cpp
core_perception/lidar_localizer_ros2/: CMakeLists.txt  package.xml
core_perception/lidar_localizer_ros2/include/: ndt_matching.hpp
core_perception/lidar_localizer_ros2/launch/: ndt_matching.launch.py
core_perception/lidar_localizer_ros2/src/: ndt_matching.cpp  ndt_matching_node.cpp
core_perception/ndt_cpu_ros2/: CMakeLists.txt  package.xml
core_perception/ndt_cpu_ros2/include/ndt_cpu_ros2/: NormalDistributionsTransform.h  VoxelGrid.h
core_perception/ndt_cpu_ros2/src/: NormalDistributionsTransform.cpp  Octree.cpp  Registration.cpp  VoxelGrid.cpp
core_perception/ndt_gpu/: CMakeLists.txt  package.xml
core_perception/ndt_gpu/config/: README.md
core_perception/ndt_gpu_ros2/: CMakeLists.txt  package.xml
core_perception/ndt_gpu_ros2/include/ndt_gpu_ros2/: NormalDistributionsTransform.h
core_perception/ndt_gpu_ros2/src/: MatrixDevice.cu  MatrixHost.cu  NormalDistributionsTransform.cu  Registration.cu  SymmetricEigenSolver.cu  VoxelGrid.cu
core_perception/points_downsampler/: CMakeLists.txt  package.xml
core_perception/points_downsampler/config/: interface.yaml
core_perception/points_downsampler/include/: points_downsampler.hpp  random_filter.hpp  voxel_grid_filter.hpp
core_perception/points_downsampler/launch/: points_downsample.launch.py
core_perception/points_downsampler/msg/: PointsDownsamplerInfo.msg
core_perception/points_downsampler/nodes/random_filter/: main.cpp  random_filter.cpp
core_perception/points_downsampler/nodes/voxel_grid_filter/: main.cpp  voxel_grid_filter.cpp  voxel_grid_filter_config.hpp  voxel_grid_filter_node.cpp  voxel_grid_filter_node.hpp
core_planning/twist_gate/: CMakeLists.txt  package.xml
core_planning/twist_gate/src/: twist_gate.cpp  twist_gate_node.cpp
core_planning/twist_gate/test/src/: test_twist_gate.cpp
core_planning/twist_gate_ros2/: CMakeLists.txt  package.xml
core_planning/twist_gate_ros2/include/twist_gate/: twist_gate.hpp
core_planning/twist_gate_ros2/src/: twist_gate.cpp
core_planning/twist_gate_ros2/test/src/: test_twist_gate.hpp
messages/autoware_can_msgs/: CMakeLists.txt  package.xml
messages/autoware_can_msgs/msg/: CANPacket.msg
messages/autoware_config_msgs/: CMakeLists.txt  package.xml
messages/autoware_config_msgs/msg/: ConfigCarKF.msg  ConfigPedestrianDPM.msg  ConfigRcnn.msg  ConfigSSD.msg
messages/autoware_external_msgs/: CMakeLists.txt  package.xml
messages/autoware_map_msgs/: CMakeLists.txt  package.xml
messages/autoware_msgs/: CMakeLists.txt  package.xml
messages/autoware_msgs/msg/: CameraExtrinsic.msg  ExtractedPosition.msg  ImageLaneObjects.msg  ImageObjTracked.msg  PointsImage.msg  ProjectionMatrix.msg  ScanImage.msg  SyncTimeDiff.msg  VehicleStatus.msg  WaypointState.msg
messages/autoware_system_msgs/: CMakeLists.txt  package.xml
messages/autoware_system_msgs/msg/: DiagnosticStatus.msg  NodeStatus.msg  SystemStatus.msg
messages/tablet_socket_msgs/: CMakeLists.txt  package.xml
messages/vector_map_msgs/: CMakeLists.txt  package.xml
(+140 files in other folders)
