<?xml version="1.0"?>
<package format="3">
  <name>amathutils_lib</name>
  <version>1.2.0</version>
  <description>The libamathutils package</description>
  <maintainer email="yusuke.fujii@tier4.jp">Yusuke FUJII</maintainer>
  <author email="yusuke.fujii@tier4.jp">Yusuke FUJII</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>  
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>
  
  <build_depend>carma_cmake_common</build_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslint</depend>
  <depend condition="$ROS_VERSION == 1">tf</depend>

  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">carma_ros2_utils</depend>
  
  <depend>autoware_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen</depend>

  <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>
  
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">launch_testing_ament_cmake</test_depend>
  
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
