<?xml version="1.0"?>
<package format="3">
  <name>autoware_lanelet2_ros_interface</name>
  <version>1.2.0</version>
  <description>The autoware_lanelet2_ros_interface pacakge contains libraries to handle Lanelet2 format data.</description>

  <maintainer email="ryohsuke.mitsudome@tier4.jp">mitsudome-r</maintainer>

  <license>Apach 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>

  <build_depend>carma_cmake_common</build_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslint</depend>

  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_lifecycle</depend>

  <depend>amathutils_lib</depend>
  <depend>geographiclib</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_maps</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_validation</depend>
  <depend>lanelet2_extension</depend>
  <depend>autoware_lanelet2_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pugixml-dev</depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>

  <export>
      <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
