<?xml version="1.0"?>
<package format="2">
  <name>ndt_gpu_ros2</name>
  <version>1.12.0</version>
  <description>The ndt_gpu package</description>
  <maintainer email="yuki@ertl.jp">Yuki Kitsukawa</maintainer>
  <maintainer email="anh@ertl.jp">Anh Viet Nguyen</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>ament_auto_cmake</build_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
